Enlaces agregados y mejorados, css básico

--- a/jesuscruz125/pasatiemposv2/pasatiempo1.html
+++ b/jesuscruz125/pasatiemposv2/pasatiempo1.html
@@ -11,6 +11,15 @@
     <header>
         <h1 class="titulodep">Deportes</h1>
         <p class="volver"><a href="index.html">← Volver al índice principal</a></p>
+        <nav>
+            <ul>
+                <li><a href="pasatiempo1.html">Deportes</a></li>
+                <li><a href="pasatiempo2.html">Música</a></li>
+                <li><a href="pasatiempo3.html">Series</a></li>
+                <li><a href="pasatiempo4.html">Libros</a></li>
+                <li><a href="pasatiempo5.html">Tecnología y computación</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section>
@@ -19,7 +28,7 @@
                 <p class="deporte">Desde hace tiempo he visto diferentes juegos de la <abbr title="National Basketball Association" lang="en">NBA</abbr>, especialmente los más antiguos, donde participaron leyendas del baloncesto como <mark>Michael Jordan</mark>. Actualmente, mi principal inspiración para practicar este deporte es <mark>Stephen Curry</mark>.</p>
                 <img width="1000px" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fs.yimg.com%2Fny%2Fapi%2Fres%2F1.2%2FEfK8K68pdbP0IFRSn2Ag.Q--%2FYXBwaWQ9aGlnaGxhbmRlcjt3PTEyMDA7aD04MDA-%2Fhttps%3A%2F%2Fs.yimg.com%2Fos%2Fcreatr-uploaded-images%2F2024-02%2Fc899c050-cb6c-11ee-b356-7190aa5f509b&f=1&nofb=1&ipt=be0761f4f52bbc4623cc8761146b24b6b6181c3dd9ff1e3c99bb56d264e6289d" alt=" Lebron James y Stephen Curry">
 
-                <p>Para profundizar en la historia de Stephen Curry, te recomiendo ver el documental <cite><a href="https://tv.apple.com/mx/movie/stephen-curry-infravalorado/umc.cmc.23v0wxaiwz60bjy1w4vg7npun" target="_blank">Stephen Curry: Underrated</a></cite>, disponible en Apple TV+.</p>
+                <p>Para profundizar en la historia de <span style="color: red;">Stephen Curry</span>, te recomiendo ver el documental <cite><a href="https://tv.apple.com/mx/movie/stephen-curry-infravalorado/umc.cmc.23v0wxaiwz60bjy1w4vg7npun" target="_blank">Stephen Curry: Underrated</a></cite>, disponible en Apple TV+.</p>
             </article>
             <hr>
 
@@ -28,26 +37,79 @@
                 <h2>Entrenamiento físico</h2>
                 <p class="deporte">Me gusta ejercitarme para mantener un cuerpo sano y estar <strong>físicamente activo</strong>. Aunque disfruto mucho de este pasatiempo, reconozco que requiere bastante esfuerzo, por lo que procuro hacerlo con el objetivo de <em>mantenerme saludable</em> y no tomarlo de manera demasiado competitiva.</p>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/Yko3GMseY40?si=LBL_8VJHlT0ydO-8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                <h2>Mi rutina semanal</h2>
+                <table>
+                    <tr>
+                        <th>Actividad</th>
+                        <th>Lunes</th>
+                        <th>Martes</th>
+                        <th>Miercoles</th>
+                        <th>Jueves</th>
+                        <th>Viernes</th>
+                        <th>Sabado</th>
+                        <th>Domingo</th>
+                    </tr>
+                    <tr>
+                        <td>Ir a la facultad</td>
+                        <td colspan="5">X</td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Ir al gimnasio</td>
+                        <td>X</td>
+                        <td></td>
+                        <td>X</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Pasar tiempo en familia</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td colspan="2" rowspan="2">X</td>
+                    </tr>
+                    <tr>
+                        <td>Ir de compras</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                </table>
+
             </article>
             <hr>
             <h3>Encuesta (opcional)</h3>
             <form action="">
-                <label for="namedep">¿Cual es tu deporte favorito?</label>
+                <label for="namedep">¿Cuál es tu deporte favorito?</label>
                 <input type="text" id="namedep" name="namedep"><br>
                 <label for="hrs">¿Cuantas horas entrenas al día?</label>
                 <input type="number" name="hrs" id="hrs"><br>
                 <label for="correo">Te gustaría ingresar tu correo para recibir noticias sobre deportes</label>
                 <input type="email" name="correo" id="correo"><br>
+                <label for="col">¿De que color sería tu siguiente prenda deportiva?</label>
+                <input type="color" name="col" id="col"><br>
                 <input type="button" value="Enviar">
             </form>
             <p>¡Muchas gracias por llegar hasta aquí!</p>
         </section>
     </main>
     <aside>
-        
+        <h3>Información adicional</h3>
+        <p>Recuerda descansar después del gimnasio.</p>
+        <p>Verifica tus clases de la facultad antes de salir.</p>
     </aside>
     <footer>
-        
+        <p>&copy; Creado por Jesus Cruz. Todos los derechos reservados </p>
+        <address>Monterrey, Nuevo León</address>
     </footer>
 </body>
 </html>
