--- a/jesuscruz125/pasatiemposv2/pasatiempo3.html
+++ b/jesuscruz125/pasatiemposv2/pasatiempo3.html
@@ -10,6 +10,15 @@
     <header>
         <h1>Series</h1>
         <p class="volver"><a href="index.html">← Volver al índice principal</a></p>
+        <nav>
+            <ul>
+                <li><a href="pasatiempo1.html">Deportes</a></li>
+                <li><a href="pasatiempo2.html">Música</a></li>
+                <li><a href="pasatiempo3.html">Series</a></li>
+                <li><a href="pasatiempo4.html">Libros</a></li>
+                <li><a href="pasatiempo5.html">Tecnología y computación</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <h2>Gravity Falls</h2>
@@ -36,6 +45,7 @@
     </aside>
     <footer>
         <p>&copy; Creado por Jesus Cruz. Todos los derechos reservados </p>
+        <address>Monterrey, Nuevo León</address>
     </footer>
 </body>
 </html>
