--- a/jesuscruz125/pasatiemposv2/pasatiempo4.html
+++ b/jesuscruz125/pasatiemposv2/pasatiempo4.html
@@ -10,6 +10,15 @@
     <header>
         <h1>Libros</h1>
         <p class="volver"><a href="index.html">← Volver al índice principal</a></p>
+        <nav>
+            <ul>
+                <li><a href="pasatiempo1.html">Deportes</a></li>
+                <li><a href="pasatiempo2.html">Música</a></li>
+                <li><a href="pasatiempo3.html">Series</a></li>
+                <li><a href="pasatiempo4.html">Libros</a></li>
+                <li><a href="pasatiempo5.html">Tecnología y computación</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <div>
@@ -17,7 +26,7 @@
             <p>El <strong>Libro de Bill</strong> relata todo lo que le sucedió a Bill después de los eventos de la serie. <i>Un pequeño spoiler:</i> aunque todos creían que Bill ya no existía, lo que no saben es que Axolotl se apiadó de él… y ahora está en proceso de una posible reencarnación… ¿o tal vez no?</p>
             
             <figure>
-                <img src="billcipher.jpg" alt="Portada del Libro de Bill Cipher">
+                <img width="500px" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fm.media-amazon.com%2Fimages%2FI%2F81UKxPfStlL._SL1500_.jpg&f=1&nofb=1&ipt=73476508b4c97282480dff70375957730749a037cd34460e6c03e95ec7571e5a" alt="Portada del Libro de Bill Cipher">
                 <figcaption>Portada del Libro de Bill Cipher</figcaption>
             </figure>
 
@@ -39,7 +48,7 @@
             <p>El <strong>Diario 3</strong> es sumamente interesante. En él descubrimos qué sucedió con <i>Stanford Pines</i> y encontramos información detallada sobre los monstruos, además de páginas inéditas que nunca aparecieron en la serie. Es un libro que responde muchas incógnitas y que, para mí, es muy especial. <mark>Lo recomiendo absolutamente</mark>.</p>
             
             <figure>
-                <img src="diario3.jpg" alt="Portada del Diario 3">
+                <img width="500px" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.planetadelibros.com.uy%2Fusuaris%2Flibros%2Ffotos%2F267%2Foriginal%2F266135_portada_gravity-falls-diario-3_disney_201710312047.jpg&f=1&nofb=1&ipt=7ca4ab59ecfe53e7ff3ba09f6a22078df99cbc74cfd12f09198a4c5dc066f2a3" alt="Portada del Diario 3">
                 <figcaption>Portada del Diario 3 de Gravity Falls</figcaption>
             </figure>
 
@@ -69,7 +78,7 @@
                 No olvides revisar los dibujos y anotaciones marginales.
             </pre>
         </div>
-        <p>¡Muchas gracias por llegar hasta aquí! Sería genial que les dieras una oportunidad, así fomentamos la lectura y descubrimos nuevas historias juntos.</p>
+        <p> &hearts; ¡Muchas gracias por llegar hasta aquí! Sería genial que les dieras una oportunidad, así fomentamos la lectura y descubrimos nuevas historias juntos. &hearts;</p>
     </main>
     <aside>
         <h3>Otras recomendaciones de lectura</h3>
@@ -81,6 +90,7 @@
     </aside>
     <footer>
         <p>&copy; Creado por Jesus Cruz. Todos los derechos reservados </p>
+        <address>Monterrey, Nuevo León</address>
     </footer>
 </body>
 </html>
