--- a/jesuscruz125/pasatiemposv2/pasatiempo5.html
+++ b/jesuscruz125/pasatiemposv2/pasatiempo5.html
@@ -10,6 +10,15 @@
     <header>
         <h1>Tecnología y computación</h1>
         <p class="volver"><a href="index.html">← Volver al índice principal</a></p>
+        <nav>
+            <ul>
+                <li><a href="pasatiempo1.html">Deportes</a></li>
+                <li><a href="pasatiempo2.html">Música</a></li>
+                <li><a href="pasatiempo3.html">Series</a></li>
+                <li><a href="pasatiempo4.html">Libros</a></li>
+                <li><a href="pasatiempo5.html">Tecnología y computación</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section>
@@ -26,16 +35,19 @@
                 <h3>NVIDIA</h3>
                 <p><p>Las tarjetas gráficas NVIDIA RTX ofrecen tecnologías avanzadas de trazado de rayos en tiempo real, inteligencia artificial y renderizado de alta fidelidad. A continuación, puedes consultar la guía rápida de la serie Quadro RTX Ada.</p></p>
                 <embed src="https://images.nvidia.com/aem-dam/Solutions/design-visualization/quadro-product-literature/proviz-rtx-ada-gen-online-qsg.pdf" type="application/pdf" width="600" height="400"><br>
-                <p>Música retro</p>
+                <p>Música retro que suelo escuchar mientras veo el <span style="color: blueviolet;">rendimiento</span> de las tarjetas de video.</p>
                 <audio controls source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"></audio>
             </article>
         </section>
     </main>
     <aside>
-        
+        <h3>Recomendaciones personales</h3>
+        <p>No te obsesiones con ninguna marca, cada una tiene su estilo así como sus ventajas y desventajas.</p>
+        <p>Ve videos sobre cómo funcionará el rendimiento en tu computadora con tus componentes elegidos, así estarás más cerca del rendimiento esperado en tu computador.</p>
     </aside>
     <footer>
         <p>&copy; Creado por Jesus Cruz. Todos los derechos reservados </p>
+        <address>Monterrey, Nuevo León</address>
     </footer>
 </body>
 </html>
