--- a/aaronrdzr/paginaweb2/pagina5.html
+++ b/aaronrdzr/paginaweb2/pagina5.html
@@ -15,13 +15,11 @@
     </header>
     <main>
         <header>
-            <h2>¿Porque </h2>
-            <p>Yo crecí en una familia "futbolera" y desde pequeño me llamo la atencion jugarlo y eso fue gracias a mi padre ya que yo iba a verlo jugar sus partidos. El futbol es el deporte que más disfruto hacer y lo sigo jugando aunque sea ya mas un hobbie que un objetivo como lo era antes. </p>
-
-            <p>Ahora en mi tiempo libre disfruto ver otros deportes como Basquetbol, Beisbol, Liga MX y ligas europeas de futbol.</p>
+            <h2>¿Porque me gusta cocinar?</h2>
+            <p>AL estar solo en casa mucho tiempo tuve la necesidad de aprender a cocinar, aunque antes me daba flojera estos ulrimos meses al probar hacer platillos diferentes le he agarrado un gusto a la cocina. </p>
         </header>
 
-        <img src="C:\Users\aaron\Pictures\484.JPG" alt="Partido de Futbol" width="800">
+        <img src="C:\Users\aaron\Downloads\cocina.jpg" alt="Imagen de ejemplo de la cocina" width="800">
     </main>
     <aside></aside>
     <footer>
