--- a/chrischupapi/index.html
+++ b/chrischupapi/index.html
@@ -1,53 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="estilos.css">
+    <title>chrischupapi</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
+
 <body>
-    <header>
-        <h1 style="color: black; background: 10px; background-color: red;">MIS PASATIEMPOS</h1>
-        <p>Bienvendo a mi pagina web conoce esto de mi:</p>
-    </header>
-    <main>
-        <article>
-            <header>
-                <h2 style="color: black;">1. Musica</h2>
-            </header>
-            <p>Uno de mis pasatiempos favoritos es escuchar musica, es algo de mi rutina diaria y algo qye nunca dejaria de hacer.</p>
-           <img src="C:\Users\chris\OneDrive\Imágenes\Saved Pictures\descarga.jpg"  alt="Imagen relacionada con la Musica" width="250">
-           <footer>
+    <h1>Evidencias - CHRISTIAN LEONARDO LOZANO RAMOS</h1>
+    <article>
+        <header>
+            <h2>Práctica 1</h2>
+        </header>
+        <p>Nos tocó presentarnos en esta practica con nuestros pasatiempos</p>
+        <h2> LINKS</h2>
 
-           </footer>
-        </article>
-        
-        <article>
-            <header>
-            <h2 style="color: black;">2. Deportes</h2>
-            </header>
-            <p>Me gusta mucho ver el futbol ,soy aficoinado de los Tigres ,me la pasaria horas viendo el deporte solamente que no me gusta practicarlo  </p>
-            <p> </p>
-            <img src="C:\Users\chris\OneDrive\Imágenes\Saved Pictures\istockphoto-1219371111-612x612.jpg" alt="Imagen de fubtol." width="250">
-            <footer>
+        <ul>
+            <li><a href="https://github.com/chrischupapi/pasatiempos">Repositorio de pasatiempos</a></li>
+            <li><a href="https://github.com/chrischupapi/pasatiempos/blob/main/index.html">Archivo HTML</a></li>
+            <li><a href="https://github.com/chrischupapi/pasatiempos/blob/main/estilo.css">Archivo CSS</a></li>
+            <li><a href="https://github.com/chrischupapi/pasatiempos/commits/main/">Commits de la práctica</a></li>
+        </ul>
 
-            </footer>
-        </article>
-        <article>
-            <header>
-                <h2 style="color: black;">3. Peliculas</h2>
-            </header>
-            <p>Me gusta ver peliculas de muchos tipos pero en lo personal soy mas fan de toda la saga de star wars </p>
-            <img src="C:\Users\chris\OneDrive\Imágenes\Screenshots\Star_Wars_Logo.svg" alt="Imagen del logo de star wars" width="250">
-            <footer>
+        <h2> Fechas de elaboración de la práctica</h2>
 
-            </footer>
-        </article>
-    </main>
+        <p>Míercoles 13 de agosto del 2025</p>
+    </article>
+
     <footer>
-        <p>Christian Lozano </p>
+        <p>© 2025 - CHRISTIAN LEONARDO LOZANO RAMOS</p>
     </footer>
-
 </body>
+
 </html>
