--- a/jesuscruz125/pasatiemposv2/index.html
+++ b/jesuscruz125/pasatiemposv2/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Mis pasatiempos">
+    <meta name="author" content="Jesús Cruz">
     <link rel="stylesheet" href="estilosp2.css">
     <title>Pagina principial sobre mis pasatiempos</title>
 </head>
