--- a/jesuscruz125/pasatiemposv2/pasatiempo1.html
+++ b/jesuscruz125/pasatiemposv2/pasatiempo1.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="NBA">
+    <meta name="description" content="Mis pasatiempos">
+    <meta name="author" content="Jesús Cruz">
     <link rel="stylesheet" href="estilosp2.css">
     <title>Actividades físicas</title>
 </head>
