Commit final de pasatiemposv2 actualizacion del menu entre paginas y actualizacion del estilo del mismo

--- a/AlejandroRmzEsc/pasatiemposv2/hobbie1.html
+++ b/AlejandroRmzEsc/pasatiemposv2/hobbie1.html
@@ -12,6 +12,13 @@
             <strong>Magia</strong>
         </h1>
     </header>
+    <nav>
+        <a href="index.html">main</a>
+        <a href="hobbie2.html">Musica</a>
+        <a href="hobbie3.html">Videojuegos</a>
+        <a href="hobbie4.html">Gimnasio</a>
+        <a href="hobbie5.html">Peliculas</a>
+    </nav>
     <main>
         <p>Desde secundaria me ha encantado la magia, por lo que puede provocar en el publico, desde infantes hasta adultos mayores, es una actividad muy buena y requiere bastante habilidad, aqui dejo mis vertientes favoritas</p>
 
