--- a/AlejandroRmzEsc/pasatiemposv2/hobbie2.html
+++ b/AlejandroRmzEsc/pasatiemposv2/hobbie2.html
@@ -12,6 +12,13 @@
             <strong>Escuchar musica</strong>
         </h1>
     </header>
+    <nav>
+        <a href="index.html">Main</a>
+        <a href="hobbie1.html">Magia</a>
+        <a href="hobbie3.html">Videojuegos</a>
+        <a href="hobbie4.html">Gimnasio</a>
+        <a href="hobbie5.html">Peliculas</a>
+    </nav>
     <main>
         <p>Disfruto de la musica, no por su letra, sino por lo que me generan las combinaciones de distitos instrumentos y sonidos digitalizados, creo sinceramente que cada genero tiene su complejidad asi como sus puntos debiles, pero creo que todos conllevam un grandioso trabajo detras</p>
 
