--- a/AlejandroRmzEsc/pasatiemposv2/hobbie3.html
+++ b/AlejandroRmzEsc/pasatiemposv2/hobbie3.html
@@ -12,6 +12,13 @@
             <strong>Videojuegos</strong>
         </h1>
     </header>
+    <nav>
+        <a href="index.html">Main</a>
+        <a href="hobbie1.html">Magia</a>
+        <a href="hobbie2.html">Musica</a>
+        <a href="hobbie4.html">Gimnasio</a>
+        <a href="hobbie5.html">Peliculas</a>
+    </nav>
     <main>
         <p>Los videojuegos yo los considero como una forma de arte, distinta de las demas, porque no solo te invita a que vivas la experiencia a tu manera, sino que es una manera muy buena de plasmar cada uno de los sentimientos del autor y de los jugadores, aqui mis favoritos: </p>
 
