--- a/AlejandroRmzEsc/pasatiemposv2/hobbie5.html
+++ b/AlejandroRmzEsc/pasatiemposv2/hobbie5.html
@@ -12,7 +12,13 @@
             <strong>Ver peliculas</strong>
         </h1>
     </header>
-    
+    <nav>
+        <a href="index.html">Main</a>
+        <a href="hobbie1.html">Magia</a>
+        <a href="hobbie2.html">Musica</a>
+        <a href="hobbie3.html">Videojuegos</a>
+        <a href="hobbie4.html">Gimnasio</a>
+    </nav>
     <main>
         <p>Soy una poersona que le gusta demasiado el ver no solo la pelicula sino que me gusta descubrir que hay detras de, como la fotografia, los efectos especiales, y todo el trabajo sonoro que se le agrega a un filme, aqui muestro unos de mis favoritos</p>
 
