--- a/AlejandroRmzEsc/pasatiemposv2/hobbie4.html
+++ b/AlejandroRmzEsc/pasatiemposv2/hobbie4.html
@@ -17,6 +17,13 @@
             <strong>Gimnasio</strong>
         </h1>
     </header>
+    <nav>
+        <a href="index.html">Main</a>
+        <a href="hobbie1.html">Magia</a>
+        <a href="hobbie2.html">Musica</a>
+        <a href="hobbie3.html">Videojuegos</a>
+        <a href="hobbie5.html">Peliculas</a>
+    </nav>
     <main>
         <p>En mis  tiempos libres me gusta ir al gimnasio, no solo para hacer ejercicio, sino que tambien me gusta conocer gente que esta interesada en el cuidado de su salud, me parece fascinante la dedicacion que veo en las personas y me da gusto ver los cambios que genera el gimnasio</p>
 
