Se añadío la estrctura del pasatiempo 3, se agregó la tabla, un video, imagenes y estilos CSS

--- a/Hugo-0699/pasatiemposmod/index.html
+++ b/Hugo-0699/pasatiemposmod/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina principal</title>
+    <meta name="author" content="Hugo Alejandro Zapata Rosales">
     <meta name="description" content="Pasatiempos de Hugo Alejandro Zapata Rosales">
     <meta name="keywords" content="dibujo, videojuegos, gym, escritura">
-    <meta name="author" content="Hugo Alejandro Zapata Rosales">
     <link rel="stylesheet" href="estilos.css">
     <link rel="icon" href="imagenes/icono-inicial.png" type="image/png">
 </head>
@@ -17,13 +17,13 @@
     <main>
         <ul class="ulprincipal">
             <li class="liprincipal"><a class="aprincipal" href="pasatiempo1.html">El Dibujo</a></li>
-            <li class="liprincipal"><a class="aprincipal" href="pasatiempo2.html">Los Video-Juegos</a></li>
-            <li class="liprincipal"><a class="aprincipal" href="pasatiempo3.html">GYM</a></li>
+            <li class="liprincipal"><a class="aprincipal" href="pasatiempo2.html">Video-Juegos</a></li>
+            <li class="liprincipal"><a class="aprincipal" href="pasatiempo3.html">GYM y Calistenia</a></li>
             <li class="liprincipal"><a class="aprincipal" href="pasatiempo4.html">La Escritura</a></li>
         </ul>
         <br>
         <center><img class="imgprincipal" width="400" src="imagenes/img-perfil-maki.jpeg"></center>
-    </br>
+        </br>
     </main>
     <footer class="copyright">
         <address>
