mejoras en el index y finalizacion de la practica 3

--- a/RdeReimer/index.html
+++ b/RdeReimer/index.html
@@ -5,33 +5,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Evidencias</title>
     <style>
+        pre{
+            font-family: Arial, Helvetica, sans-serif;
+        }
         .centrado{
             display: flex;
             justify-content: center;
+            font-size: x-large;
+            text-shadow: 2px 5px 10px aqua;
         }
         .centrado-text{
             display: flex;
             justify-content: center;
             text-align: center;
-            ;
+            padding: 10px 10px;
         }
-        .centrado-ol{
+        .centrado-ul{
             display: grid;
             justify-content: center;
-            text-align: center;
-            margin: 0 20px;
+            margin: 20px 20px;
+        }
+
+        section{
+            border: 3px solid  aqua;
+            border-radius: 20px;
+            margin: 100px 100px;
+            box-shadow: 20px 20px 20px rgba(0,0,0,0.1);
+            background-color: aliceblue;
+        }
+        
+        .tituloPracticas{
+            font-size: xx-large;
+            display: flex;
+            justify-content: center;
+            margin-top: 50px;
+            text-shadow: 2px 5px 10px aqua;
+        }
+        body{
+            background-color: rgb(247, 239, 230);
         }
     </style>
 </head>
-<body class="">
+<body >
     <header>
-        <h1 class="centrado">Evidencias Fudamentos de desarrollo web</h1>
+        <h1 class="tituloPracticas">Evidencias Fudamentos de desarrollo web</h1>
     </header>
     <main >
+        <section>
+        <header>
         <h2 class="centrado">Practica 1</h2>
+        </header>
         <pre class="centrado-text">Publicar pagina web sencilla en cuenta personal Github.
 
-            Se debe realizar un solo documento html donde se integre información sobre sus pasatiempos. Utilizar las etiquetas: meta, title, header, main,footer, article, section, img y p. Aplicar estilos sencillos como color de texto, fondo y borde. Para los estilos utilizar un archivo externo css. Se necesita que realice 1 commit por cada tema que desarrolle.
+            Se debe realizar un solo documento html donde se integre información sobre sus pasatiempos.
+            Utilizar las etiquetas: meta, title, header, main,footer, article, section, img y p. 
+            Aplicar estilos sencillos como color de texto, fondo y borde. Para los estilos utilizar un archivo externo css. Se necesita que realice 1 commit por cada tema que desarrolle.
 
             Yo realice un commit por:
 
@@ -43,27 +71,63 @@
 
             Fecha commits: 13 al 15 de Agosto.
         </pre>
-        <ol class="centrado-ol">
-            <a href="https://github.com/rdereimer/misgustos/commits/main/?since=2025-08-13&until=2025-08-15
-            "> Link Commits</a>
-            <a href="https://github.com/rdereimer/misgustos">Link Repositorio</a>
-            <a href=" https://rdereimer.github.io/misGustos/">Link Sitio Publicado</a>
-        </ol>
-        <h3>Practica 2</h3>
-        <pre>
-            Práctica 2
+        <ul class="centrado-ul">
+            <li>Link Commits: 
+                <a href="https://github.com/rdereimer/misgustos/commits/main/?since=2025-08-13&until=2025-08-15
+                 ">https://github.com/rdereimer/misgustos/commits/main/?since=2025-08-13&until=2025-08-15</a> 
+           <li> Link Repositorio: 
+             <a href="https://github.com/rdereimer/misgustos">https://github.com/rdereimer/misgustos</a>
+            </li>
+            <li>Link Sitio Publicado: 
+                <a href=" https://rdereimer.github.io/misGustos/">https://rdereimer.github.io/misGustos/</a>
+            </li>
+        </ul>
+        </section>
+        <section>
+        <header>
+            <h3 class="centrado">Practica 2</h3>
+        </header>
+        <pre class="centrado-text">
             En esta práctica se creó una carpeta personal en la organización y dentro de la misma se agregó un archivo llamado index.html.
 
             El archivo index.html será la página personal de cada estudiante. Se solicitó agregar los links de la primera práctica.
 
             Fecha commits: 20 al 22 de Agosto.
         </pre>
-        <ol class="centrado-ol">
-            <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=RdeReimer&since=2025-08-20&until=2025-08-22"> Link Commits</a>
-            <a href="https://fdw52ad2025.github.io/website52/RdeReimer/index.html   ">Link Página personal</a>
-        </ol>
+        <ul class="centrado-ul">
+            <li> Link Commits: 
+            <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=RdeReimer&since=2025-08-20&until=2025-08-22"> https://github.com/FDW52AD2025/website52/commits/main/?author=RdeReimer&since=2025-08-20&until=2025-08-22</a> </li>
+           <li>Link Página personal: <a href="https://fdw52ad2025.github.io/website52/RdeReimer/index.html   ">https://fdw52ad2025.github.io/website52/RdeReimer/index.html  </a></li>
+        </ul>
+        </section>
+        <section>
+        <header>
+            <h4 class="centrado">Practica 3</h4>
+        </header>
+        <pre class="centrado-text">
+            Modificar la página pasatiempos que desarrollo en su cuenta personal. 
+            Está practica consiste en realizar la versión 2 sobre sus pasatiempos, 
+            pero esta vez se tiene que guardar en la organización.
+             Se solicita que utilice 5 archivos html para la información de sus pasatiempos.
+              En cada documento html utilice etiquetas de estructura (header,nav, main,aside,footer).
+
+            Se deben agregar nuevas etiquetas de las paginas 23,27, 29, 30,31,32 del material de clase.
+
+            Dentro del nuevo sitio diseñe algún formulario (form).
+
+            Fecha commits: 27 al 29 de Agosto.
+        </pre>
+        <ul class="centrado-ul">
+            <li>Link Página pasatiempos versión 2: <a href="https://fdw52ad2025.github.io/website52/RdeReimer/pasatiemposver2/pagina1.html"> Link Página pasatiempso versión 2:</a></li>
+            <li>Link Commits trabajo en clase 27 de agosto: <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=RdeReimer&since=2025-08-27&until=2025-08-27">https://github.com/FDW52AD2025/website52/commits/main/?author=RdeReimer&since=2025-08-27&until=2025-08-27</a></li>
+            <li>Link Commits: <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=RdeReimer&since=2025-08-27&until=2025-08-29">https://github.com/FDW52AD2025/website52/commits/main/?author=RdeReimer&since=2025-08-27&until=2025-08-29</a> </li>
+        </ul>
+        </section>
     </main>
     <aside></aside>
-    <footer></footer>
+    <footer> 
+        <p>UANL, FACPYA</p>
+        <p>Creado por Andres Leal</p>
+    </footer>
 </body>
 </html>
