--- a/RdeReimer/pasaTimepoVer2/pagina1.html
+++ b/RdeReimer/pasaTimepoVer2/pagina1.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav style="display: flex; justify-content: center;">
-        <a class="navLinks" href="pagina1.html">Hobby1</a>
-        <a class="navLinks" href="pagina2.html">Hobby2</a>
-        <a class="navLinks" href="pagina3.html">Hobby3</a>
-        <a class="navLinks" href="pagina4.html">Hobby4</a>
-        <a class="navLinks" href="pagina5.html">Hobby5</a>
+    <nav class="navPages">
+        <a class="navLinks" href="pagina1.html">Musica</a>
+        <a class="navLinks" href="pagina2.html">Videojuegos</a>
+        <a class="navLinks" href="pagina3.html">Programacion</a>
+        <a class="navLinks" href="pagina4.html">Mtb</a>
+        <a class="navLinks" href="pagina5.html">Opiniones</a>
     </nav>
 
     <header> <h1>Hobbys - Andres Leal</h1></header>
@@ -24,6 +24,9 @@
         <p>Me gusta tocar guitarra, en general los instrumentos y la musica, pero no eh aprendido mas instrumentos, pronto comprare un teclado ya que siempre es lo que eh querido pero por cosas de la vida comence con la guitarra y me gusto, me quede y como ya sabia decidi centrarme en ese instrumento hasta perfecionarlo.</p>
         <img  src="img/guitar.webp" alt="Fender CD-60cs-12">
     </article>
+   </section>
+    <section>
+        <audio autoplay loop controls src="musica/requinto.weba"></audio>
    </section>
     <footer>
         <p>UANL, FACPYA</p>
