--- a/RdeReimer/pasaTimepoVer2/pagina4.html
+++ b/RdeReimer/pasaTimepoVer2/pagina4.html
@@ -7,27 +7,27 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav style="display: flex; justify-content: center;">
-        <a class="navLinks" href="pagina1.html">Hobby1</a>
-        <a class="navLinks" href="pagina2.html">Hobby2</a>
-        <a class="navLinks" href="pagina3.html">Hobby3</a>
-        <a class="navLinks" href="pagina4.html">Hobby4</a>
-        <a class="navLinks" href="pagina5.html">Hobby5</a>
+    <nav class="navPages">
+        <a class="navLinks" href="pagina1.html">Musica</a>
+        <a class="navLinks" href="pagina2.html">Videojuegos</a>
+        <a class="navLinks" href="pagina3.html">Programacion</a>
+        <a class="navLinks" href="pagina4.html">Mtb</a>
+        <a class="navLinks" href="pagina5.html">Opiniones</a>
     </nav>
     
     <header> <h1>Hobbys - Andres Leal</h1></header>
     <section>
     <header>
-        <h2 class="code">Programacion</h2>
+        <h2 class="mtb">Mountain Bike</h2>
     </header>
     <article>
-        <p>No fue algo que pensara en ello, desde chico siempre fui curioso por la tecnologia y todos decian que estudiara sistemas, lo hice, nos enseñaron sql y python, y poco a poco fui agarrando el gusto, por cosas de la vida surguieron proyectos y me di cuenta que era muy divertido y entretenido programar y aprender sobre ello, me enfoco en aprender y emplear las mejores practicas y diversos temas para ser Full stack y mas adelante adentrarme en la IA.</p>
-        <img  src="img/code.webp" alt="persona escribiendo codigo">
+        <p>En el proceso de dejar el sobrepeso tuve que hacer cardio, con ello, llego el MTB, empece a salir en bici, saltar, encontre algunas calles sin pavimentar y eran divertidas, decidi aventurarme al cerro y las bajadas peligorosas fueron aun mas divertidas, fui a una competencia de 32km, no quede primero pero tampoco ultimo, pero fue muy divertido, ya no suelo hacerlo por tiempo, pero es muy divertido.</p>
+        <img  src="img/mtb.webp" alt="Mountan Bike">
     </article>
    </section>
-    <footer>
-        <p>UANL, FACPYA</p>
-        <p>Creado por Andres Leal</p>
+   <footer>
+    <p>UANL, FACPYA</p>
+    <p>Creado por Andres Leal</p>
    </footer>
 </body>
 </html>
