--- a/RdeReimer/pasaTimepoVer2/pagina5.html
+++ b/RdeReimer/pasaTimepoVer2/pagina5.html
@@ -7,23 +7,42 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav style="display: flex; justify-content: center;">
-        <a class="navLinks" href="pagina1.html">Hobby1</a>
-        <a class="navLinks" href="pagina2.html">Hobby2</a>
-        <a class="navLinks" href="pagina3.html">Hobby3</a>
-        <a class="navLinks" href="pagina4.html">Hobby4</a>
-        <a class="navLinks" href="pagina5.html">Hobby5</a>
+    <nav class="navPages">
+        <a class="navLinks" href="pagina1.html">Musica</a>
+        <a class="navLinks" href="pagina2.html">Videojuegos</a>
+        <a class="navLinks" href="pagina3.html">Programacion</a>
+        <a class="navLinks" href="pagina4.html">Mtb</a>
+        <a class="navLinks" href="pagina5.html">Opiniones</a>
     </nav>
     
     <header> <h1>Hobbys - Andres Leal</h1></header>
     <section>
     <header>
-        <h2 class="code"></h2>
+        <h2>Opiniones</h2>
     </header>
-    <article>
-        <p></p>
-        <img  src="img" alt="">
+    <article >
+        <form style="display: grid;" action="">
+            <label for="compartesHobby">¿Te gustaron mis hobbys?</label>
+            <select name="CompartesHobby" id="CompartesHobby">
+                <option value="Si">Si</option>
+                <option value="No">No</option>
+            </select>
+            <label for="cualCompartes">¿Cual haces?</label>
+                <select name="CompartesHobby" id="CompartesHobby">
+                    <option value="Musica">Musica</option>
+                    <option value="Videojuegos">Videojuegos</option>
+                    <option value="Progra">Programacion</option>
+                    <option value="Mtb">Mtb</option>
+                    <option value="Ninguno">Ninguno</option>
+            </select>
+            <label for="hobbyFav">¿Cual es tu hobby favorito?</label>
+            <input type="text" name="hobbyFav" id="hobbyFav">
+            <button type="submit">Enviar</button>
+        </form>
     </article>
+   </section>
+    <section>
+        <audio autoplay loop controls src="musica/elevador.weba"></audio>
    </section>
     <footer>
         <p>UANL, FACPYA</p>
