Commit final de la evidencia 1

--- a/AlejandroRmzEsc/pasatiemposv2/hobbie1.html
+++ b/AlejandroRmzEsc/pasatiemposv2/hobbie1.html
@@ -13,7 +13,7 @@
         </h1>
     </header>
     <nav>
-        <a href="index.html">main</a>
+        <a href="index.html">Main</a>
         <a href="hobbie2.html">Musica</a>
         <a href="hobbie3.html">Videojuegos</a>
         <a href="hobbie4.html">Gimnasio</a>
