--- a/AlejandroRmzEsc/index.html
+++ b/AlejandroRmzEsc/index.html
@@ -11,44 +11,35 @@
     </header>
     <div class="content">
         <div class="evidencia">
-            <h2>Evidencia 1</h2>
-            <p>En esta evidencia nos solicitaron realizar una pagina en la cual plasmemos nuestros hobbies favoritos, </p>
+            <h2>Practica 1</h2>
+            <p>El objetivo central de esta práctica es simular un flujo de trabajo real de desarrollo web utilizando Git y GitHub. No se trata solo de escribir código, sino de aprender a gestionarlo, versionarlo y publicarlo de manera profesional.
+
+            Vas a crear desde cero una página web personal (también llamada "landing page") donde serás tú el protagonista. El contenido girará en torno a tus pasatiempos o hobbies, lo que le dará un toque personal y único.</p>
             <div class="opcion">
-                <a href="#"><p>Lorem ipsum dolor sit amet</p></a>
-                <a href="#"><p>Lorem ipsum dolor sit amet</p></a>
-                <a href="#"><p>Lorem ipsum dolor sit amet</p></a>
-                <!--<a href="#"><p>Lorem ipsum dolor sit amet</p></a>-->
+                <a href="https://github.com/AlejandroRmzEsc/practica1.git" target="_blank"><p>Repositorio</p></a>
+                <a href="https://alejandrormzesc.github.io/practica1/" target="_blank"><p>Sitio </p></a>
+                <a href="https://github.com/AlejandroRmzEsc/practica1/commits/main/" target="_blank"><p>Commits</p></a>
             </div>
         </div>
         <div class="evidencia">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus voluptas, animi dolor placeat corporis sequi quae? Impedit, libero officiis cumque rem voluptatum cum atque earum error aspernatur, aperiam ab enim.</p>
+            <h2>Practica 2</h2>
+            <p>En esta practica basicamente se realizo esta pagina para guardar todas las que haremos en el semestre</p>
+            <div class="opcion">
+                <a href="https://github.com/FDW52AD2025/website52/blob/main/AlejandroRmzEsc/index.html" target="_blank">Pagina Personal</a>
+                <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=AlejandroRmzEsc" target="_blank">Commits</a>
+            </div>
         </div>
         <div class="evidencia">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus voluptas, animi dolor placeat corporis sequi quae? Impedit, libero officiis cumque rem voluptatum cum atque earum error aspernatur, aperiam ab enim.</p>
+            <h2>Practica 3</h2>
+            <p>Aqui realizamos la segunda version de la pagina de pasatiempos, agregando distintas etiquetas vistas en clase, asi como algo de estilos con class</p>
+            <div class="opcion">
+                <a href="https://github.com/FDW52AD2025/website52/blob/main/AlejandroRmzEsc/pasatiemposv2/index.html" target="_blank">Pagina Personal</a>
+                <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=AlejandroRmzEsc&since=2025-08-27&until=2025-08-27" target="_blank">Commits 27 ago</a>
+                <a href="https://github.com/FDW52AD2025/website52/commits/main/AlejandroRmzEsc/pasatiemposv2" target="_blank">Commits practica 3</a>
+                <a href="pasatiemposv2/index.html">Pagina Pasatiempos</a>
+            </div>
         </div>
-                <div class="evidencia">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus voluptas, animi dolor placeat corporis sequi quae? Impedit, libero officiis cumque rem voluptatum cum atque earum error aspernatur, aperiam ab enim.</p>
         </div>
     </div>
-    <!--
-    <div id="containerall">
-        <div class="head">
-            <h2 class="container">Evidencias - Alejandro Ramirez</h2>
-        </div>
-        <nav>
-            <a href="https://github.com/AlejandroRmzEsc/practica1.git" target="_blank">
-                Repositorio
-            </a>
-
-            <a href="https://alejandrormzesc.github.io/practica1/" target="_blank">
-                Sitio Publicado
-            </a>
-
-            <a href="https://github.com/AlejandroRmzEsc/practica1/commits/main/" target="_blank">
-                Commits
-            </a>
-        
-    </div>
-    -->
 </body>
 </html>
