--- a/victoriabalderas/pasatiemposver2/pagina2.html
+++ b/victoriabalderas/pasatiemposver2/pagina2.html
@@ -10,59 +10,98 @@
     <title>Gustos musicales</title>
 
 </head>
-<body>
+<div>
     <header>
+        <h1>Mis gustos musicales</h1>
         <nav>
-            <ul>
-                <a href="mainpasatiempos.html">Regresar a página principal</a>
-            </ul>
+            <a href="mainpasatiempos.html">Regresar a página principal</a>
+            <a href="pagina1.html"> La danza en  mi vida</a>
+            <a href="pagina3.html"> Mi trabajo</a>
+            <a href="pagina4.html"> Mis películas favoritas</a>
+            <a href="pagina5.html"> Musicales de Broadway</a>
         </nav>
-        <h1>Mis gustos musicales</h1></header>
-    <main>
-        <section>
-            <header>
-                <h2>Géneros</h2>
-            </header>
-            <p>Mi gusto musical es bastante diverso: disfruto canciones que me hacen bailar y otras que me hacen reflexionar, según el momento. La música es para mí una forma de expresar mi energía y mis emociones. Crecí en un hogar donde la música era parte del día a día, por lo que tengo gustos musicales muy diversos, en un momento puedo escuchar merengue y en otro cambiar drásticamente a una canción romántica, e incluso rock. Lo que me hace casi imposible tener un género favorito.</p>
+    </header>
+    <div class="contenedor">
+        <main>
+            <article>
+                <section>
+                    <header>
+                        <h2>Géneros</h2>
+                    </header>
+                    <p>Mi gusto musical es bastante diverso: disfruto canciones que me hacen bailar y otras que me hacen reflexionar, según el momento. La música es para mí una forma de expresar mi energía y mis emociones. Crecí en un hogar donde la música era parte del día a día, por lo que tengo gustos musicales muy diversos, en un momento puedo escuchar merengue y en otro cambiar drásticamente a una canción romántica, e incluso rock. Lo que me hace casi imposible tener un género favorito.</p>
 
-            <img src="" alt="foto aquí">
-            <footer>Fotografía</footer>
+                    <img src="" alt="foto aquí">
+                    <footer>Fotografía</footer>
 
-        </section>
+                </section>
 
-        <section>
-            <header>
-                <h2>Artistas</h2>
-            </header>
-            <p>Es casi imposible para mi decidir, pero entre mis artistas preferidos se encuentran Sabrina Carpenter, Bad Bunny, Kendrick Lamar, KATSEYE, Big Time Rush y The Weeknd</p>
-        </section>
-        
-        <section>
-            <header>
-                <h2>Canciones</h2>
-            </header>
-            <p>A continuación les presento mi top 5 de canciones favoritas del mes:</p>
+                <section>
+                    <header>
+                        <h2>Artistas</h2>
+                    </header>
+                    <p>Es casi imposible para mi decidir, pero entre mis artistas preferidos se encuentran Sabrina Carpenter, Bad Bunny, Kendrick Lamar, KATSEYE, Big Time Rush y The Weeknd</p>
+                </section>
+                
+                <section>
+                    <header>
+                        <h2>Canciones</h2>
+                    </header>
+                    <p>A continuación les presento mi top 5 de canciones favoritas del mes:</p>
+                    <ul>
+                        <li>1. TV OFF - KENDRICK LAMAR</li>
+                        <img class="portadamusica" src="https://i1.sndcdn.com/artworks-y6WaHzlvp7PbwkLT-JlZicw-t500x500.png" alt="Portada de la canción de Kendrick Lamar" width="300px" height="300px">
+                        <br>
+                        <li>2. GABRIELA - KATSEYE</li>
+                        <img class="portadamusica" src="https://linkstorage.linkfire.com/medialinks/images/602d6eb6-3306-44c4-9e72-605743fc0b09/artwork-440x440.jpg" alt="Portada de la canción de KATSEYE" width="300px" height="300px">
+                        <br>
+                        <li>3. PUMP IT - BLACK EYED PEAS</li>
+                        <img class="portadamusica" src="https://i.scdn.co/image/ab67616d0000b273c6710b4a52539506c30e5354" alt="Portada de la canción de Black Eyed Peas" width="300px" height="300px">
+                        <br>
+                        <li>4. THUNDERSTRUCK - AC/DC</li>
+                        <img class="portadamusica" src="https://i.scdn.co/image/ab67616d0000b2738399047ff71200928f5b6508" alt="Portada de la canción de ACDC" width="300px" height="300px">
+                        <br>
+                        <li>5. LATINA FOREVA - KAROL G</li>
+                        <img class="portadamusica" src="https://i.scdn.co/image/ab67616d0000b2732bcae9fa5d95c564ddcaea00" alt="Portada de la canción de Karol G" width="300px" height="300px">
+                    </ul>
+                </section>
+            </article>
+        </main>
+
+        <aside>
+            <h3>Enlaces recomendados</h3>
             <ul>
-                <li>1. TV OFF - KENDRICK LAMAR</li>
-                <img src="https://i1.sndcdn.com/artworks-y6WaHzlvp7PbwkLT-JlZicw-t500x500.png" alt="Portada de la canción de Kendrick Lamar">
-                <br>
-                <li>2. GABRIELA - KATSEYE</li>
-                <img src="https://linkstorage.linkfire.com/medialinks/images/602d6eb6-3306-44c4-9e72-605743fc0b09/artwork-440x440.jpg" alt="Portada de la canción de KATSEYE">
-                <br>
-                <li>3. PUMP IT - BLACK EYED PEAS</li>
-                <img src="https://i.scdn.co/image/ab67616d0000b273c6710b4a52539506c30e5354" alt="Portada de la canción de Black Eyed Peas">
-                <br>
-                <li>4. THUNDERSTRUCK - AC/DC</li>
-                <img src="https://i.scdn.co/image/ab67616d0000b2738399047ff71200928f5b6508" alt="Portada de la canción de ACDC">
-                <br>
-                <li>5. LATINA FOREVA - KAROL G</li>
-                <img src="https://i.scdn.co/image/ab67616d0000b2732bcae9fa5d95c564ddcaea00" alt="Portada de la canción de Karol G">
+                <li><a href="https://github.com/victoriabalderas">Mi perfil de Github</a></li>
+                <li><a href="https://github.com/victoriabalderas?tab=repositories">Otros proyectos</a></li>
             </ul>
-        </section>
-    </main>
+             <form action="" >
+                <h4>¡Me gustaría saber tu opinión!</h4>
+                <label for="nombre">Nombre:</label>
+                <input placeholder="Ingresa tu nombre aquí" type="text" name="nombre" id="nombre">
+                <hr>
+                <label for="correo">Correo:</label>
+                <input placeholder="Ingresa tu correo aquí" type="email" name="email" id="email">
+                <hr>
+                <label for="pagina">Usuario de Github:</label>
+                <input placeholder="Escribe tu enlace aquí" type="url" name="Pagina" id="pagina">
+                <hr>
+                <label for="seccionfav">¿Cual fue tu sección favorita?</label>
+                <select type="seccion" name="seccionfav" id="seccionfav">
+                    <option value="1">Danza</option>
+                    <option value="2">Musica</option>
+                    <option value="3">Trabajo</option>
+                    <option value="4">Películas</option>
+                    <option value="5">Musicales</option>
+                </select>
+                <hr>
+                <label for="comentario">Deja tu comentario:</label>
+                <input placeholder="Escribe tu opinión" type="text" name="comentario" id="comentario">
+                <hr>
+            </form>
+        </aside>
+    </div>
 
-    <aside></aside>
-    <footer></footer>
-
+    <footer>
+        <address> Desarrollado por Victoria Abigail Balderas Guevara</address>
+    </footer>
 </body>
 </html>
