--- a/victoriabalderas/pasatiemposver2/pagina5.html
+++ b/victoriabalderas/pasatiemposver2/pagina5.html
@@ -12,39 +12,54 @@
 </head>
 <body>
     <header>
+        <h1>Musicales de Broadway</h1>
         <nav>
-            <ul>
-                <a href="mainpasatiempos.html">Regresar a página principal</a>
-            </ul>
+            <a href="mainpasatiempos.html">Regresar a página principal</a>
+            <a href="pagina1.html"> La danza en  mi vida</a>
+            <a href="pagina2.html"> Mis gustos musicales</a>
+            <a href="pagina3.html"> Mi trabajo</a>
+            <a href="pagina4.html"> Mis películas favoritas</a>  
         </nav>
-        <h1>Musicales de Broadway favoritos</h1></header>
-    <main></main>
-    <form action="" >
-        <h4>¡Me gustaría saber tu opinión!</h4>
-        <label for="nombre">Nombre:</label>
-        <input placeholder="Ingresa tu nombre aquí" type="text" name="nombre" id="nombre">
-        <hr>
-        <label for="correo">Correo:</label>
-        <input placeholder="Ingresa tu correo aquí" type="email" name="email" id="email">
-        <hr>
-        <label for="pagina">Usuario de Github:</label>
-        <input placeholder="Escribe tu enlace aquí" type="url" name="Pagina" id="pagina">
-        <hr>
-        <label for="seccionfav">¿Cual fue tu sección favorita?</label>
-        <select type="seccion" name="seccionfav" id="seccionfav">
-            <option value="1">Danza</option>
-            <option value="2">Musica</option>
-            <option value="3">Trabajo</option>
-            <option value="4">Películas</option>
-            <option value="5">Musicales</option>
-        </select>
-        <hr>
-        <label for="comentario">Deja tu comentario:</label>
-        <input placeholder="Escribe tu opinión" type="text" name="comentario" id="comentario">
-        <hr>
-    </form>
-    <aside></aside>
-    <footer></footer>
+    </header>
+    <div class="contenedor">
+        <main></main>
+        
+        <aside>
+            <h3>Enlaces recomendados</h3>
+            <ul>
+                <li><a href="https://github.com/victoriabalderas">Mi perfil de Github</a></li>
+                <li><a href="https://github.com/victoriabalderas?tab=repositories">Otros proyectos</a></li>
+            </ul>
+            <form action="" >
+                <h4>¡Me gustaría saber tu opinión!</h4>
+                <label for="nombre">Nombre:</label>
+                <input placeholder="Ingresa tu nombre aquí" type="text" name="nombre" id="nombre">
+                <hr>
+                <label for="correo">Correo:</label>
+                <input placeholder="Ingresa tu correo aquí" type="email" name="email" id="email">
+                <hr>
+                <label for="pagina">Usuario de Github:</label>
+                <input placeholder="Escribe tu enlace aquí" type="url" name="Pagina" id="pagina">
+                <hr>
+                <label for="seccionfav">¿Cual fue tu sección favorita?</label>
+                <select type="seccion" name="seccionfav" id="seccionfav">
+                    <option value="1">Danza</option>
+                    <option value="2">Musica</option>
+                    <option value="3">Trabajo</option>
+                    <option value="4">Películas</option>
+                    <option value="5">Musicales</option>
+                </select>
+                <hr>
+                <label for="comentario">Deja tu comentario:</label>
+                <input placeholder="Escribe tu opinión" type="text" name="comentario" id="comentario">
+                <hr>
+            </form>
+        </aside>
+    </div>  
+   
+    <footer>
+        <address> Desarrollado por Victoria Abigail Balderas Guevara</address>
+    </footer>
 
 </body>
 </html>
