--- a/Hugo-0699/pasatiemposmod/pasatiempo3.html
+++ b/Hugo-0699/pasatiemposmod/pasatiempo3.html
@@ -14,13 +14,15 @@
     <main>
         <article>
             <section>
-                <h3>Ultimamente no he podido entrenar en el gimnasio, pero estuve yendo aproximadamente tres meses y medio, o incluso un poco más. Lo malo es que no asistía todos los días y ya no me resultaba tan rentable volver a pagar la mensualidad. Así que encontré una forma más económica de mantenerme activo y eso fue con la calistenia, la cual practico al menos dos horas al día.</h3>
-                <b>Les paso mi rutina de ejercicio semanal que hice en la tabla de la derecha, por si las dudas 😅</b>
-
+                <h3>Ultimamente no he podido entrenar en el gimnasio, pero estuve yendo aproximadamente tres meses y medio, o incluso un poco más. Lo malo es que no asistía todos los días y ya no me resultaba tan rentable volver a pagar la mensualidad. Así que encontré una forma más económica de mantenerme activo y eso fue con la calistenia, la cual practico al menos dos horas al día. Pero ahora que ya voy a volver al GYM, retomaré la rutina que siempre suelo hacer:</h3>
+                <b>Les mostraré mi rutina de ejercicio semanal que hice en la tabla de la derecha 😅</b>
+            </section>
+            <section>
+                 <b>Debajo hay un video que complemente la rutina &hearts;</b>
             </section>
             <section class="fila-img-tabla">
                 <figure>
-                    <img src="https://images.pexels.com/photos/14623671/pexels-photo-14623671.jpeg" alt="" style="height: 380px; width: 660px;">
+                    <img src="https://images.pexels.com/photos/14623671/pexels-photo-14623671.jpeg" alt="">
                     <figcaption>
                         <b>Si tengo fotos pero no estoy en mi prime, les dejo una foto de como estaré en mi prime 😁👌</b>
                         <p>Imagenes obtenidas de la pagina web:<a href="https://www.pexels.com/search/art/"> Pexels ai art</a></p>
