--- a/jesuscruz125/pasatiemposv2/pasatiempo2.html
+++ b/jesuscruz125/pasatiemposv2/pasatiempo2.html
@@ -43,7 +43,12 @@
         </section>
     </main>
     <aside>
-
+        <h3>Recomendaciones para disfrutar la música</h3>
+        <ul>
+            <li>Encuentra un lugar cómodo y tranquilo para escuchar.</li>
+            <li>Escucha activamente prestando atención a los instrumentos y la voz.</li>
+            <li>Explora distintos géneros y épocas para descubrir nuevos sonidos.</li>
+        </ul>
     </aside>
     <footer>
         <p>&copy; Creado por Jesus Cruz. Todos los derechos reservados </p>
